feat: add details and better location for hyperlinks

--- a/src/content/about/about.mdx
+++ b/src/content/about/about.mdx
@@ -5,18 +5,19 @@ description: "About Abdullah Eshaq, background, values, and focus areas."
 
 # About me
 
-I am a software engineer 
+I am currently a software engineer at Amazon working on utlizing LLM's to extract key info from meetings and providing them to stakeholders. Previously I was working on Payment Systems and automating infrastructure. Check my resume for more details.
 
-## What I care about
-
-- List of stuff
+I graduated from The University of British Columbia with a Bachelor's of Science in Computer Science.
 
 ## Focus areas
 
 <div class="pill-grid">
   <span>Software engineering</span>
+  <span>Distrubuted systems</span>
+  <span>Cloud development</span>
+  <span>AI development</span>
 </div>
 
 ## Beyond the screen
 
-What i do for fun
+In my free time i like to go to the gym and read
