--- a/src/content/home/home.mdx
+++ b/src/content/home/home.mdx
@@ -1,19 +1,20 @@
 ---
 title: "Abdullah Eshaq — Software Engineer"
 description: "Personal website with projects, writing, and background."
-eyebrow: "Currently exploring x + z"
-heading: "Hi, I am Abdullah. I do x y and z."
-lead: "This space is a home for the things I am building and the projects I am proud of."
+eyebrow: "Currently exploring rapid prototyping and development"
+heading: "Hi, I am Abdullah"
+lead: "This space is a home for the things I am building and tech i am exploring."
 now:
-  - "Highlight stuff you are doing"
+  - "Currently utilizing LLMs to automate meeting summarization and action-item extraction"
+  - "Building apps to help third places connect people to each other more"
 tiles:
   - title: "About"
-    description: "Background, values, and the work I love doing."
+    description: "Background and a little more about me"
     href: "/about"
   - title: "Projects"
-    description: "Selected projects with notes on process and impact."
+    description: "Some things I worked on"
     href: "/projects"
   - title: "Blog"
-    description: "Essays, experiments, and lessons learned."
+    description: "Stuff I want to talk about"
     href: "/blog"
 ---
