fix: update resume

--- a/src/content/resume/resume.mdx
+++ b/src/content/resume/resume.mdx
@@ -15,12 +15,14 @@ updated: 2025-01-18
   </div>
   <ul>
     <li>
-      Led BACS payment methods implementation in AWS, delivering authorization flows, mandate setup, idempotent
-      state machines, and fault-tolerant retries to expand into the UK bank-debit market.
+      Co-Led the payment methods implementation of BACS (Bankers Automated Clearing System) in AWS,
+      implementing authorization flows, mandate setup, idempotent state machines, and fault-tolerant retries to expand
+      AWS into the UK bank-debit market and lower payment processing costs.
     </li>
     <li>
       Coordinated integration across 6+ AWS systems (Processing, Collections, Fraud/Risk, Policy, Console),
-      ensuring compliance requirements were met for a secure and scalable BACS launch.
+      running design reviews and ensuring compliance requirements were met to deliver a secure and scalable BACS
+      launch expected to support hundreds of thousands of annual transactions.
     </li>
     <li>
       Architected a region-agnostic infrastructure deployment system for the AWS European Sovereign Cloud,
@@ -31,8 +33,8 @@ updated: 2025-01-18
       $200K/month reduction in losses.
     </li>
     <li>
-      Streamlined 50+ CI/CD pipelines into a unified delivery system, cutting deployment cycles from
-      60+ days to under 5 days.
+      Improved reliability and consistency across 50+ CI/CD pipelines by adding retries, strengthening dependency handling,
+      and introducing test suites, reducing deployment cycles from 60+ days to under 5 days.
     </li>
     <li>
       Mentored an intern through architectural reviews and technical coaching, resulting in meaningful
