--- a/src/content/home/home.mdx
+++ b/src/content/home/home.mdx
@@ -6,10 +6,10 @@ heading: "Hi, I am Abdullah"
 lead: "This space is a home for the things I am building and tech i am exploring."
 now:
   - "Currently utilizing LLMs to automate meeting summarization and action-item extraction"
-  - "Building apps to help third places connect people to each other more"
+  - "Building apps to help people connect more in third places"
 tiles:
   - title: "About"
-    description: "Background and a little more about me"
+    description: "A little more about me"
     href: "/about"
   - title: "Projects"
     description: "Some things I worked on"
