feat: add more content and clean up placeholders

--- a/src/content/about/about.mdx
+++ b/src/content/about/about.mdx
@@ -5,7 +5,7 @@ description: "About Abdullah Eshaq, background, values, and focus areas."
 
 # About me
 
-I am currently a software engineer at Amazon working on utlizing LLM's to extract key info from meetings and providing them to stakeholders. Previously I was working on Payment Systems and automating infrastructure. Check my resume for more details.
+I am currently a software engineer at Amazon working on utlizing LLM's to extract key info from meetings and providing them to stakeholders. Previously, I was working on Payment Systems and automating infrastructure. Check out my resume for more details.
 
 I graduated from The University of British Columbia with a Bachelor's of Science in Computer Science.
 
@@ -20,4 +20,4 @@ I graduated from The University of British Columbia with a Bachelor's of Science
 
 ## Beyond the screen
 
-In my free time i like to go to the gym and read
+In my free time, I like to go to the gym, read and hang out with my cat.
