--- a/src/content/home/home.mdx
+++ b/src/content/home/home.mdx
@@ -5,7 +5,8 @@ eyebrow: "Currently exploring rapid prototyping and development"
 heading: "Hi, I am Abdullah"
 lead: "This space is a home for the things I am building and tech i am exploring."
 now:
-  - "Currently utilizing LLMs to automate meeting summarization and action-item extraction"
+  - "Currently a Software Development Engineer at Amazon"
+  - "Working on utilizing LLMs to automate meeting summarization and action-item extraction"
   - "Building apps to help people connect more in third places"
 tiles:
   - title: "About"
