--- a/src/content/projects/calm-check-ins.mdx
+++ b/src/content/projects/calm-check-ins.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Project Example"
-description: "description"
-role: "Role"
-stack: "Stack"
-github: "https://github.com/aeshaq"
+title: "Personal Site"
+description: "You're on it!"
+role: "Solo"
+stack: "Astro, MDX, TypeScript"
+github: "https://github.com/aeshaq/personal-website"
 order: 1
 ---
 
-More info here
+Finally got around to building a personal website. This was very fun to build!
