--- a/src/content/blog/designing-for-quiet-confidence.mdx
+++ b/src/content/blog/designing-for-quiet-confidence.mdx
@@ -1,6 +1,15 @@
 ---
-title: "My First Website"
-description: "Hello"
+title: "Personal Websites"
+description: "Rite of passage"
 pubDate: 2026-01-16
 ---
-Blog details
+### Blog details
+
+It is a rite of passage for software engineers to make a personal website. I attempted to do it the first time back in my first year of CS 
+in university and it seemed too big of a challenge, and then I forgot about it, became too busy with school, other projects and internships
+and finally with my full time job. 
+
+Coming back to it now, with a little more experience under my belt, building the site was easy and enjoyable. It makes me think of how experience
+is built in small steps. I don't remember waking up one day and thinking coding something I struggled with before was all of a suddent easy, it happened 
+over time, slowly. 
+
