chore: update about section

--- a/src/content/about/about.mdx
+++ b/src/content/about/about.mdx
@@ -5,9 +5,7 @@ description: "About Abdullah Eshaq, background, values, and focus areas."
 
 # About me
 
-I am currently a software engineer at Amazon working on utlizing LLM's to extract key info from meetings and providing them to stakeholders. Previously, I was working on Payment Systems and automating infrastructure. Check out my resume for more details.
-
-I graduated from The University of British Columbia with a Bachelor's of Science in Computer Science.
+Amazon Software Development Engineer (AWS Payments) and UBC B.Sc. in Computer Science. Focused on backend systems and cloud infrastructure. Experience delivering secure, fault-tolerant payment and fraud/risk systems end-to-end; from design reviews and compliance alignment to production launch across multiple services. Strong in Java/Python and AWS.
 
 ## Focus areas
 
